Melhorias nos exemplos - Calculadora Aposentadoria (Refatorar strings) e Lista Compras(Refatorar strings, Validacao do produto a incluir e Remocao de produto)

--- a/CalculoAposentadoria/app/src/main/res/values/strings.xml
+++ b/CalculoAposentadoria/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Calculo Aposentadoria</string>
+    <string name="calcular_aposentadoria">Calcule quanto tempo falta para sua aposentadoria !</string>
+    <string name="escolha_sexo">Escolha o sexo:</string>
+    <string name="digite_idade">Digite sua idade:</string>
+    <string name="calcular">Calcular</string>
 </resources>
