--- a/ListaCompras/app/src/main/res/values/strings.xml
+++ b/ListaCompras/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ListaCompras</string>
+    <string name="inserir">Inserir</string>
+    <string name="nome_produto">Nome do Produto</string>
 </resources>
