--- a/ListaCompras/app/src/main/res/values/strings.xml
+++ b/ListaCompras/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">ListaCompras</string>
-    <string name="inserir">Inserir</string>
+    <string name="adicionar_itens">Adicionar Itens</string>
+    <string name="total">TOTAL: 0,00</string>
+    <string name="cadastrar_produto">Cadastrar Produto</string>
+    <string name="descricao_img">Imagem de uma câmero ou produto para comprar </string>
+    <string name="inserir">INSERIR</string>
     <string name="nome_produto">Nome do Produto</string>
+    <string name="qtde">Quantidade</string>
+    <string name="valor_reais">R$ 0.00</string>
+    <string name="item_qtde"> Qtd</string>
 </resources>
